# la_distance

./: Dockerfile  Dockerfile.dev  docker-compose.yml  emissions.ks.ipynb  emissions.v1.ipynb  extract_center.ipynb  get_distance.ipynb  lookup_demo.ipynb  pollution.v1.ipynb  pyproject.toml  readme.md  requirements.txt
.devcontainer/: devcontainer.json
data/: la_area_pop.csv  la_area_pop_new.csv  la_details.csv  la_xy.csv  temp_gdp.csv
data/geo/gb/: district_borough_unitary_region.dbf  district_borough_unitary_region.shx
data/geo/ni/: OSNI_Open_Data_Largescale_Boundaries__Local_Government_Districts_2012.dbf
data/imd/: lsoa_datazone_la.csv
data/old_council_clusters/: council_clusters_v1.csv  deprivation_cluster_v1.csv  deprivation_distance_v1.csv
data/outputs/: council_clusters_v1.csv  geographic_distance.csv
data/outputs/composite/: description.md  la_labels.csv  label_desc.csv
data/outputs/emissions/: description.md  la_labels.csv  label_desc.csv
data/outputs/geographic_distance/: description.md  distance_map.csv  la_labels.csv  (+2 more)
data/source/: RUC_LAD_2011_EN_LU.csv  regionalgrossdomesticproductlocalauthorities.xlsx
docs/: _config.yml  index.md
helpers/: la.py  la_mapping.py  space.py  viz.py
modules/: la.py  la_mapping.py
notebooks/: comparison.ipynb  composite.ipynb  emissions.v2-prep.ipynb  emissions.v2.ipynb  extract_center.ipynb  imd.ipynb  lookup_demo_v1.ipynb  lookup_demo_v2.ipynb  ruc.ipynb  touching_overlapping_authorities.ipynb
notebooks/old_approach/: deprivation.ipynb  emissions.ks.ipynb  setup.py
tests/: test_la_distance.py
(+5 files in other folders)
