[tool.poetry]
name = "la_distance"
version = "0.1.0"
description = "Datasets and methods for calculating similarity between councils on different metrics"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
data_common = { path = "src/data_common/", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[tool.poetry.scripts]
project = 'la_distance.__main__:main'
notebook = "data_common.notebookcli.__main__:run"
dataset = "data_common.dataset.__main__:run"

[tool.pyright]
include = ["src", "notebooks"]
exclude=["src/data_common/typings"]
stubPath="src/data_common/typings"
typeCheckingMode="basic"
reportPrivateImportUsage="warning"

[notebook.settings]
default_page_title = "Settings file defined title"

[tool.dataset]
dataset_dir = "data/packages"
publish_dir = "docs/"
publish_url = "https://mysociety.github.io/la_distance/"
credit_text = "If you find this data useful, please let us know to help us make the case for future funding."
credit_url = "https://survey.alchemer.com/s3/6876792/Data-usage"